<resources>
    <string name="app_name">DYARA Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_description">Smart, gorgeous, and fashionable \ncollection makes you cool</string>
    <string name="start_jargon">YOUR BEST STYLE</string>
    <string name="start_model">start model</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account? <font color='black'>Login</font></string>
    <string name="i_don_t_have_an_account_register">I don’t have an account? <font color='black'>Register</font></string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="UR_Style">UR Style</string>
    <string name="select_image">Select Image</string>
</resources>